llvm/dev/if-func1.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/if-func1.llvm:5:1: error: expected instruction opcode
}
^
